fix: text-overflow: ellipsis 속성 삭제

--- a/src/components/Goal/GoalTitle/GoalTitle.module.css
+++ b/src/components/Goal/GoalTitle/GoalTitle.module.css
@@ -11,7 +11,6 @@
   color: yellow;
   word-break: keep-all;
   text-align: center;
-  text-overflow: ellipsis;
   overflow-wrap: anywhere;
 }
 
